--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ a, a:visited, a:link {
 }
 
 .page {
-    min-height: calc(100vh - 16px);
+    min-height: calc(100% - 16px);
     border: 3px solid;
     box-sizing: border-box;
     display: flex;
